--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Landing Page</title>
+    <link rel="stylesheet" href="./style.css">
+    <title>hero text</title>
   </head>
   <body>
     <div class="container">
@@ -59,7 +60,7 @@
               <p>Sign up for our product by clicking that button right over there!</p>
             </div>
             <div class="small-right">
-              <button class="small-box-button">Sign up</button>
+              <button>Sign up</button>
             </div>
           </div>
         </div>
